<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/back_pressed_image_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="7dp"
                android:layout_marginStart="5dp"
                android:clickable="true"
                android:src="@drawable/ic_back_button_image_24"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:focusable="true" />

            <ImageView
                android:id="@+id/info_image_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_smile_24"
                android:layout_centerVertical="true"
                android:layout_toStartOf="@+id/back_pressed_image_view"
                android:layout_marginEnd="7dp"
                android:visibility="gone"/>

            <TextView
                android:id="@+id/appbar_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bmi"
                android:layout_centerVertical="true"
                android:layout_toStartOf="@+id/info_image_view"
                android:layout_marginEnd="7dp"/>


        </RelativeLayout>
    </com.google.android.material.appbar.AppBarLayout>




    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">


        <TextView
            android:id="@+id/bmi_general_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bmi_general_info"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginEnd="4dp"
            android:layout_marginStart="4dp"
            android:gravity="start"/>

        <com.h6ah4i.android.widget.verticalseekbar.VerticalSeekBarWrapper
            android:id="@+id/choosing_length_seekbar_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_below="@+id/bmi_general_info"
            android:layout_above="@+id/body_mass_index_recycler_view"
            android:layout_marginEnd="20dp">

            <com.h6ah4i.android.widget.verticalseekbar.VerticalSeekBar
                android:id="@+id/choosing_length_seekbar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:splitTrack="false"
                android:rotation="180" />

        </com.h6ah4i.android.widget.verticalseekbar.VerticalSeekBarWrapper>



        <TextView
            android:id="@+id/choosing_length_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/number_100"
            android:textColor="#000"
            android:textSize="15sp"
            android:layout_toStartOf="@+id/choosing_length_seekbar_layout"
            android:layout_below="@+id/bmi_general_info"/>



        <ImageView
            android:id="@+id/mannequin_image_view"
            android:layout_width="250dp"
            android:layout_height="150dp"
            android:layout_alignParentStart="true"
            android:src="@drawable/zan4"
            android:layout_above="@+id/choosing_weight"
            android:contentDescription="@string/todo"/>

        <TextView
            android:id="@+id/choosing_weight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/choosing_weight"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:layout_alignParentEnd="true"
            android:layout_alignParentStart="true"
            android:gravity="center"
            android:layout_above="@+id/body_mass_index_recycler_view"/>


        <RelativeLayout
            android:id="@+id/calculate_relative_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentStart="true"
            android:gravity="center"
            android:layout_marginBottom="7dp">


            <androidx.cardview.widget.CardView
                android:id="@+id/calculate_card_View"
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:gravity="center"
                android:backgroundTint="#36E830"
                app:cardCornerRadius="10dp">

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_gravity="center">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/calculate"
                        android:textSize="18sp"
                        />

                </RelativeLayout>
            </androidx.cardview.widget.CardView>
        </RelativeLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/body_mass_index_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/calculate_relative_layout"
            android:layout_marginBottom="20dp" />



    </RelativeLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>