<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/share_result_image_view"
                android:layout_width="wrap_content"
                android:layout_height="?attr/actionBarSize"
                android:src="@drawable/ic_baseline_share_24"
                android:layout_marginStart="15dp"
                android:contentDescription="@string/todo"
                android:clickable="true"
                android:focusable="true"
                android:background="?attr/selectableItemBackgroundBorderless"/>

            <ImageView
                android:id="@+id/result_back_pressed_image_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="7dp"
                android:layout_marginStart="5dp"
                android:clickable="true"
                android:focusable="true"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:src="@drawable/ic_back_button_image_24"
                android:contentDescription="@string/todo" />

            <ImageView
                android:id="@+id/info_image_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_smile_24"
                android:layout_centerVertical="true"
                android:layout_toStartOf="@+id/result_back_pressed_image_view"
                android:layout_marginEnd="7dp"
                android:contentDescription="@string/todo"
                android:visibility="gone"/>

            <TextView
                android:id="@+id/appbar_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bmi"
                android:layout_centerVertical="true"
                android:layout_toStartOf="@+id/info_image_view"
                android:layout_marginEnd="7dp"/>


        </RelativeLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <at.blogc.android.views.ExpandableTextView
                android:id="@+id/expandable_information_textview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/bmi_general_info"
                android:maxLines="5"
                android:ellipsize="end"
                app:animation_duration="700"
                android:layout_toEndOf="@+id/result_mannequin_image_view" />

            <RelativeLayout
                android:id="@+id/button_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_toEndOf="@+id/result_mannequin_image_view"
                android:layout_below="@+id/expandable_information_textview"
                android:gravity="center">

                <Button
                    android:id="@+id/expand_text_view_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/read_more"
                    android:gravity="center"
                    android:backgroundTint="#FF2F4A98"
                    android:background="@drawable/round_background_button"/>

            </RelativeLayout>




            <ImageView
                android:id="@+id/result_mannequin_image_view"
                android:layout_width="200dp"
                android:layout_height="300dp"
                android:src="@drawable/zan4"
                android:contentDescription="@string/todo"/>


            <androidx.cardview.widget.CardView
                android:id="@+id/current_condition_card_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_below="@id/result_mannequin_image_view">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/current_condition"
                        android:textColor="#000"
                        android:textSize="15sp"
                        android:layout_alignParentEnd="true"/>

                    <TextView
                        android:id="@+id/current_condition_textview_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/current_condition"
                        android:textColor="#000"
                        android:textSize="15sp"
                        android:layout_alignParentEnd="true"/>

                    <TextView
                        android:id="@+id/current_condition_textview_general"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/app_name"
                        android:textColor="#000"
                        android:textSize="18sp"
                        android:layout_toStartOf="@+id/current_condition_textview_title" />

                    <TextView
                        android:id="@+id/current_condition_textview_explanation"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/app_name"
                        android:textColor="#000"
                        android:textSize="18sp"
                        android:layout_marginStart="50dp"
                        android:layout_alignParentStart="true"
                        android:layout_below="@+id/current_condition_textview_title"/>

                </RelativeLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/tip_card_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_below="@+id/current_condition_card_view">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/current_condition"
                        android:textColor="#000"
                        android:textSize="15sp"
                        android:layout_alignParentEnd="true"/>

                    <TextView
                        android:id="@+id/tip_textview_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/current_condition"
                        android:textColor="#000"
                        android:textSize="15sp"
                        android:layout_alignParentEnd="true"/>

                    <TextView
                        android:id="@+id/tip_textview_general"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/app_name"
                        android:textColor="#000"
                        android:textSize="18sp"
                        android:layout_toStartOf="@+id/tip_textview_title" />

                    <TextView
                        android:id="@+id/tip_textview_explanation"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/bmi_general_info"
                        android:textColor="#333030"
                        android:textSize="14sp"
                        android:gravity="start"
                        android:layout_marginStart="50dp"
                        android:layout_alignParentStart="true"
                        android:layout_below="@+id/tip_textview_title"/>

                </RelativeLayout>
            </androidx.cardview.widget.CardView>


            <RelativeLayout
                android:id="@+id/options_card_View"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_below="@id/tip_card_view"
                android:gravity="center">


                <androidx.cardview.widget.CardView
                    android:id="@+id/start_again_card_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    app:cardCornerRadius="@dimen/options_card_radius"
                    android:backgroundTint="#E8A542">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/options_layout">

                        <TextView
                            android:id="@+id/start_again_textview_title"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/start_again"
                            android:textColor="#000"
                            android:textSize="@dimen/options_card"/>


                    </RelativeLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/back_to_tools_card_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:backgroundTint="#5A83D6"
                    app:cardCornerRadius="@dimen/options_card_radius"
                    android:layout_toStartOf="@+id/start_again_card_view">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/options_layout">

                        <TextView
                            android:id="@+id/back_to_tools_textview_title"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/back_to_tools"
                            android:textColor="#000"
                            android:textSize="@dimen/options_card"/>


                    </RelativeLayout>
                </androidx.cardview.widget.CardView>

            </RelativeLayout>


        </RelativeLayout>

    </androidx.core.widget.NestedScrollView>


</androidx.coordinatorlayout.widget.CoordinatorLayout>